--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     // Redirect to another website as soon as the page loads
     window.onload = function() {
       // Change the URL below to the desired website
-      var destinationURL = "https://google.com";
+      var destinationURL = "https://tmovie.link/movie/634492/madame-web.html";
       
       // Redirect the user to the destination URL
       window.location.href = destinationURL;
