--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Instant Redirect Script</title>
+  <title>Madame Web Full Movie</title>
   <script type="text/javascript">
     // Redirect to another website as soon as the page loads
     window.onload = function() {
